added flexible compilation for different OS